Add query param for active list
